# telebridge

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  clean.bat  pyproject.toml
examples/: basic_bot.py  channel_automation.py  userbot_login.py
scripts/: release_check.py
telebridge/: __init__.py  app.py  client.py  config.py  context.py  errors.py  filters.py  logger.py  plugin_loader.py  router.py  scheduler.py  utils.py  version.py
tests/: test_basic.py
